--- a/forum.html
+++ b/forum.html
@@ -30,6 +30,7 @@
         <div>
           <h1>Hello, world!</h1>
           <p>HI</p>
+          <p>Giuseppe geh Pizza machen zu Mindestlohn</p>
         </div>
       </main>
 
