Startseite und style änderungen

--- a/home.html
+++ b/home.html
@@ -27,10 +27,20 @@
       </header>
 
       <main id="inhalt">
-        <div>
-          <h1>Hello, world!</h1>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati quo fuga voluptatibus corrupti quae vero quaerat reprehenderit, et dolorem libero doloremque voluptas exercitationem odit suscipit tenetur nihil illo, laboriosam natus.</p>
-        </div>
+        <div id="homepage">
+          <h1>Willkommen auf unserer Webseite!</h1>
+          <p>Entdecken Sie die faszinierende Welt der Webtechnologie mit unserem M10 Kurs. Hier finden Sie Informationen über verschiedene Themen, von Spielen bis hin zu unserem Online-Shop. Wir bieten eine Vielzahl von Produkten und interessanten Inhalten für Sie.<br> Unsere Webseite ist nicht nur informativ, sondern auch benutzerfreundlich gestaltet. Genießen Sie eine angenehme Navigation durch unsere Seiten und entdecken Sie, was wir zu bieten haben.</p>
+          <h2>Online-Shop</h2>
+          <p>Besuchen Sie unseren Online-Shop, um hochwertige Produkte zu entdecken. Von exquisitem Ziegenkäse bis hin zu niedlichen Teddybären – wir haben für jeden etwas.</p>
+          <h2>Spiel</h2>
+          <p>Probieren Sie unser unterhaltsames Spiel aus und erleben Sie spannende Abenteuer. Testen Sie Ihre Fähigkeiten und haben Sie Spaß!</p>
+          <h2>Social Media</h2>
+          <p>Verbinden Sie sich mit uns in den sozialen Medien. Bleiben Sie auf dem Laufenden über die neuesten Entwicklungen und nehmen Sie an aufregenden Diskussionen teil.</p>
+          <h2>Forum</h2>
+          <p>Tauschen Sie Ideen und Meinungen in unserem Forum aus. Treffen Sie Gleichgesinnte und werden Sie Teil unserer wachsenden Community.</p>
+          <h2>Über uns</h2>
+          <p>Erfahren Sie mehr über unser Team und unsere Mission. Wir freuen uns, Ihnen hochwertige Inhalte und ein angenehmes Online-Erlebnis zu bieten.</p>
+      </div>
       </main>
 
       <footer>
