Rechtliches und Anpassungen auf der Homepage

--- a/about.html
+++ b/about.html
@@ -35,9 +35,9 @@
 
       <footer>
         <ul>
-            <li><a href="">Erklärung zur Barrierefreiheit</a></li>
-            <li><a href="">Impressum</a></li>
-            <li><a href="">Datenschutzerklärung</a></li>
+            <li><a href="barrierefreiheit.html">Erklärung zur Barrierefreiheit</a></li>
+            <li><a href="impressum.html">Impressum</a></li>
+            <li><a href="datenschutz.html">Datenschutzerklärung</a></li>
         </ul>
       </footer>
     </body>
