forum und social media

--- a/social-media.html
+++ b/social-media.html
@@ -27,9 +27,12 @@
       </header>
 
       <main id="inhalt">
-        <div>
-          <h1>Hello, world!</h1>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati quo fuga voluptatibus corrupti quae vero quaerat reprehenderit, et dolorem libero doloremque voluptas exercitationem odit suscipit tenetur nihil illo, laboriosam natus.</p>
+        <div id="socialmedia">
+          <h1>Willkommen auf unserer Social Media Seite!</h1>
+          <p>Schön, dass du hier bist, um mit uns in Kontakt zu treten. In unserer Social Media Welt teilen wir nicht nur Informationen über unsere neuesten Produkte und Angebote, sondern auch spannende Einblicke hinter die Kulissen unseres Teams.</p>
+          <p>Verpasse keine Neuigkeiten, Aktionen oder exklusiven Inhalte – folge uns auf unseren Social-Media-Plattformen und werde Teil unserer wachsenden Community.</p>
+          <p>Wir sind auf verschiedenen Plattformen aktiv, darunter Facebook, Twitter, Instagram und mehr. Finde uns, um mit Gleichgesinnten zu interagieren, an Gewinnspielen teilzunehmen und auf dem Laufenden zu bleiben!</p>
+          <p>Freue dich auf inspirierende Beiträge, unterhaltsame Inhalte und die Möglichkeit, mit uns in Echtzeit zu kommunizieren. Dein Feedback und deine Teilnahme bedeuten uns viel – wir sehen uns in den sozialen Medien!</p>
         </div>
       </main>
 
