Ueber uns Seite

--- a/about.html
+++ b/about.html
@@ -27,9 +27,21 @@
       </header>
 
       <main id="inhalt">
-        <div>
-          <h1>Hello, world!</h1>
-          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Obcaecati quo fuga voluptatibus corrupti quae vero quaerat reprehenderit, et dolorem libero doloremque voluptas exercitationem odit suscipit tenetur nihil illo, laboriosam natus.</p>
+        <div id="about-us">
+          <h2>Über Uns</h2>
+          <p>Herzlich willkommen auf unserer Seite! Wir sind Benjamin Böhm und Giuseppe Teresi, engagierte Studierende der Verwaltungsinformatik an der Hochschule des Bundes. Unsere gemeinsame Reise durch das Verwaltungsinformatikstudium hat uns nicht nur fachlich bereichert, sondern auch zu guten Freunden gemacht.</p>
+  
+          <p>Giuseppe, der Genießer unserer Gruppe, liebt nicht nur die Welt der Algorithmen, sondern auch gutes Essen. In seiner Freizeit taucht er gerne in spannende Serien ein, erweitert seine Sprachkenntnisse um Spanisch und kann ohne seinen geliebten Kaffee kaum den Tag beginnen.</p>
+  
+          <p>Benjamin, der kreative Kopf, begeistert sich nicht nur für Code, sondern auch für kulinarische Kreationen. Neben seinem Studium ist er aktiv in der Feuerwehr tätig, findet Entspannung in der Welt der Musik und hat ein Auge für aktuelle Modetrends.</p>
+  
+          <p>Gemeinsam haben wir bereits beeindruckende Leistungen in verschiedenen Modulen erbracht, darunter M23, M13 und M14. Besonders stolz sind wir auf diese herausragende Prüfungsleistung, die uns nicht nur fachlich herausforderte, sondern auch unsere Teamarbeit stärkte.</p>
+  
+          <p>IT-begeistert, kaffeeabhängig und mit einer gewissen Abneigung gegenüber Jura, teilen wir auch eine Liebe zu Katzen. Trotz unserer intensiven Studienzeit gönnen wir uns ab und zu eine Pause, um die Gesellschaft dieser charmanten Tiere zu genießen.</p>
+  
+          <p>Unsere gemeinsame Vision ist es, die fortschreitende Digitalisierung der Bundesverwaltung voranzutreiben. Mit unserem erworbenen Wissen und unserer Leidenschaft für innovative Technologien setzen wir uns aktiv für dieses Ziel ein, um einen Beitrag zur modernen Gestaltung der Verwaltungsprozesse zu leisten.</p>
+  
+          <p>Danke, dass Sie mehr über uns erfahren wollten. Bei Fragen oder Anregungen stehen wir Ihnen gerne zur Verfügung!</p>
         </div>
       </main>
 
