Anpassung zum Namensfeld in der Home

--- a/home.html
+++ b/home.html
@@ -72,7 +72,7 @@
             <form id="registration-form" autocomplete="on">
                 <div id="error-message" style="color: red; display: none;">Name, Vorname und E-Mail dürfen nicht leer sein.</div>
                 <label for="name">Name:</label>
-                <input type="text" id="name" name="name" required autocomplete="name">
+                <input type="text" id="name" name="name" required autocomplete="family-name">
 
                 <label for="vorname">Vorname:</label>
                 <input type="text" id="vorname" name="vorname" required autocomplete="given-name">
