Anpassung der homeseite bzgl der Errorseite

--- a/home.html
+++ b/home.html
@@ -70,7 +70,7 @@
             <span class="close-btn" id="close-registration-btn">&times;</span>
             <h2>Registrierung</h2>
             <form id="registration-form" autocomplete="on">
-                <div id="error-message" style="color: red; display: none;">Name, Vorname und E-Mail dürfen nicht leer sein.</div>
+                <div id="error-message">Name, Vorname und E-Mail dürfen nicht leer sein.</div>
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required autocomplete="family-name">
 
