--- a/impressum.html
+++ b/impressum.html
@@ -2,7 +2,7 @@
 <html lang="de">
     <head>
         <meta charset="UTF-8" />
-        <meta name="author" content="Benjamin Boehm">
+        <meta name="author" content="Benjamin Boehm - Giuseppe Teresi">
         <meta name="date" content="02-01-2024">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./css/styles.css">
