about.html kommentiert

--- a/about.html
+++ b/about.html
@@ -1,13 +1,13 @@
-<!DOCTYPE html>
-<html lang="de">
+<!DOCTYPE html> <!-- Deklaration des HTML-Dokumenttyps -->
+<html lang="de"> <!-- Beginn des HTML-Dokuments mit der Angabe der Sprache -->
     <head>
-        <meta charset="UTF-8" />
-        <meta name="author" content="Benjamin Boehm - Giuseppe Teresi">
-        <meta name="date" content="02-01-2024">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./css/styles.css">
-        <title>M10: Webtechnologie</title>
-        <script defer src=" "></script>
+        <meta charset="UTF-8" /> <!-- Deklaration der Zeichenkodierung als UTF-8 -->
+        <meta name="author" content="Benjamin Boehm - Giuseppe Teresi"> <!-- Angabe der Autoren -->
+        <meta name="date" content="02-01-2024"> <!-- Angabe des Datums -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Einstellungen für die Darstellung auf verschiedenen Geräten -->
+        <link rel="stylesheet" href="./css/styles.css"> <!-- Verknüpfung mit externem Stylesheet -->
+        <title>M10: Webtechnologie</title> <!-- Titel des HTML-Dokuments -->
+        <script defer src=" "></script> <!-- Deferiertes Einbinden eines JavaScript-Skripts -->
     </head>
 
     <body>
@@ -15,12 +15,12 @@
         <nav>
           <div>
               <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="game.html">Spiel</a></li>
-                <li><a href="shop.html">Online-Shop</a></li>
-                <li><a href="social-media.html">Social Media</a></li>
-                <li><a href="forum.html">Forum</a></li>
-                <li id="about"><a class="active" href="about.html">Über uns</a></li>
+                <li><a href="home.html">Home</a></li> <!-- Navigationslink zur Home-Seite -->
+                <li><a href="game.html">Spiel</a></li> <!-- Navigationslink zur Spiel-Seite -->
+                <li><a href="shop.html">Online-Shop</a></li> <!-- Navigationslink zur Online-Shop-Seite -->
+                <li><a href="social-media.html">Social Media</a></li> <!-- Navigationslink zur Social Media-Seite -->
+                <li><a href="forum.html">Forum</a></li> <!-- Navigationslink zur Forum-Seite -->
+                <li id="about"><a class="active" href="about.html">Über uns</a></li> <!-- Aktiver Navigationslink zur Über-uns-Seite -->
               </ul>
           </div>
         </nav>
@@ -28,7 +28,9 @@
 
       <main id="inhalt">
         <div id="about-us">
-          <h2>Über Uns</h2>
+          <h2>Über Uns</h2> <!-- Überschrift für den Abschnitt "Über Uns" -->
+
+          <!-- Absätze mit Informationen über die Autoren -->
           <p>Herzlich willkommen auf unserer Seite! Wir sind Benjamin Böhm und Giuseppe Teresi, engagierte Studierende der Verwaltungsinformatik an der Hochschule des Bundes. Unsere gemeinsame Reise durch das Verwaltungsinformatikstudium hat uns nicht nur fachlich bereichert, sondern auch zu guten Freunden gemacht.</p>
   
           <p>Giuseppe, der Genießer unserer Gruppe, liebt nicht nur die Welt der Algorithmen, sondern auch gutes Essen. In seiner Freizeit taucht er gerne in spannende Serien ein, erweitert seine Sprachkenntnisse um Spanisch und kann ohne seinen geliebten Kaffee kaum den Tag beginnen.</p>
@@ -47,9 +49,9 @@
 
       <footer>
         <ul>
-            <li><a href="barrierefreiheit.html">Erklärung zur Barrierefreiheit</a></li>
-            <li><a href="impressum.html">Impressum</a></li>
-            <li><a href="datenschutz.html">Datenschutzerklärung</a></li>
+            <li><a href="barrierefreiheit.html">Erklärung zur Barrierefreiheit</a></li> <!-- Navigationslink zur Barrierefreiheit-Seite -->
+            <li><a href="impressum.html">Impressum</a></li> <!-- Navigationslink zur Impressum-Seite -->
+            <li><a href="datenschutz.html">Datenschutzerklärung</a></li> <!-- Navigationslink zur Datenschutzerklärung-Seite -->
         </ul>
       </footer>
     </body>
