--- a/barrierefreiheit.html
+++ b/barrierefreiheit.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
-<html lang="de">
+<!DOCTYPE html> <!-- Deklaration des HTML-Dokumenttyps -->
+<html lang="de"> <!-- Beginn des HTML-Dokuments mit der Angabe der Sprache -->
     <head>
-        <meta charset="UTF-8" />
-        <meta name="author" content="Benjamin Boehm - Giuseppe Teresi">
-        <meta name="date" content="02-01-2024">
+        <meta charset="UTF-8" /> <!-- Deklaration der Zeichenkodierung als UTF-8 -->
+        <meta name="author" content="Benjamin Boehm - Giuseppe Teresi"> <!-- Angabe der Autoren -->
+        <meta name="date" content="02-01-2024"> <!-- Angabe des Datums -->
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="./css/styles.css">
         <title>M10: Webtechnologie</title>
