--- a/barrierefreiheit.html
+++ b/barrierefreiheit.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8" /> <!-- Deklaration der Zeichenkodierung als UTF-8 -->
         <meta name="author" content="Benjamin Boehm - Giuseppe Teresi"> <!-- Angabe der Autoren -->
         <meta name="date" content="02-01-2024"> <!-- Angabe des Datums -->
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./css/styles.css">
-        <title>M10: Webtechnologie</title>
-        <script defer src=" "></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Einstellungen für die Darstellung auf verschiedenen Geräten -->
+        <link rel="stylesheet" href="./css/styles.css"> <!-- Verknüpfung mit externem Stylesheet -->
+        <title>M10: Webtechnologie</title> <!-- Titel des HTML-Dokuments -->
+        <script defer src=" "></script> <!-- Deferiertes Einbinden eines JavaScript-Skripts -->
     </head>
 
     <body>
@@ -15,12 +15,12 @@
         <nav>
           <div>
               <ul>
-                <li><a href="home.html">Home</a></li>
-                <li><a href="game.html">Spiel</a></li>
-                <li><a href="shop.html">Online-Shop</a></li>
-                <li><a href="social-media.html">Social Media</a></li>
-                <li><a href="forum.html">Forum</a></li>
-                <li id="about"><a href="about.html">Über uns</a></li>
+                <li><a href="home.html">Home</a></li> <!-- Navigationslink zur Home-Seite -->
+                <li><a href="game.html">Spiel</a></li> <!-- Navigationslink zur Spiel-Seite -->
+                <li><a href="shop.html">Online-Shop</a></li> <!-- Navigationslink zur Online-Shop-Seite -->
+                <li><a href="social-media.html">Social Media</a></li> <!-- Navigationslink zur Social Media-Seite -->
+                <li><a href="forum.html">Forum</a></li> <!-- Navigationslink zur Forum-Seite -->
+                <li id="about"><a href="about.html">Über uns</a></li> <!-- Navigationslink zur Über-uns-Seite -->
               </ul>
           </div>
         </nav>
@@ -28,7 +28,9 @@
 
       <main id="inhalt">
         <div id="bfreiheit">
-          <h2>Erklärung zur Zugänglichkeit</h2>   
+          <h2>Erklärung zur Zugänglichkeit</h2>  <!-- Überschrift für den Abschnitt "Barrierefreheit" -->
+
+          <!-- Absätze mit Informationen über die Barrierefreiheit -->
           <p>Gemäß § 12 des Behindertengleichstellungsgesetzes (BGG) ist es unser Bestreben, diese Website für alle Benutzer zugänglich zu gestalten. Wir arbeiten kontinuierlich daran, die Zugänglichkeit gemäß den Bestimmungen des BGG, der Barrierefreie Informationstechnik-Verordnung (BITV 2.0) und der harmonisierten europäischen Norm EN 301 549 zu verbessern.</p>
           <p>Stand der Zugänglichkeit:</p>
           <p>Die Website ist derzeit noch nicht vollständig im Einklang mit den technischen Anforderungen der BITV 2.0. Überprüfungen zur Vereinbarkeit fanden im Januar 2024 und Februar 2024 statt.</p>
@@ -48,9 +50,9 @@
 
       <footer>
         <ul>
-            <li><a class="active" href="barrierefreiheit.html">Erklärung zur Barrierefreiheit</a></li>
-            <li><a href="impressum.html">Impressum</a></li>
-            <li><a href="datenschutz.html">Datenschutzerklärung</a></li>
+            <li><a class="active" href="barrierefreiheit.html">Erklärung zur Barrierefreiheit</a></li> <!-- Navigationslink zur Barrierefreiheit-Seite -->
+            <li><a href="impressum.html">Impressum</a></li> <!-- Navigationslink zur Impressum-Seite -->
+            <li><a href="datenschutz.html">Datenschutzerklärung</a></li> <!-- Navigationslink zur Datenschutzerklärung-Seite -->
         </ul>
       </footer>
     </body>
