--- a/home.html
+++ b/home.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="de">
-    <head>
-        <meta charset="UTF-8" />
-        <meta name="author" content="Benjamin Boehm - Giuseppe Teresi">
-        <meta name="date" content="02-01-2024">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./css/styles.css">
-        <title>M10: Webtechnologie</title>
-        <script defer src="./js/home.js"></script>
+  
+    <head> 
+      <!-- Definition des HTML5-Dokuments -->
+        <meta charset="UTF-8" /> <!-- Festlegung der Zeichenkodierung auf UTF-8 -->
+        <meta name="author" content="Benjamin Boehm - Giuseppe Teresi"> <!-- Autoren -->
+        <meta name="date" content="02-01-2024"> <!-- Veröffentlichungsdatum des Dokuments -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Einstellungen für responsive Darstellung auf verschiedenen Geräten -->
+        <link rel="stylesheet" href="./css/styles.css"> <!-- Verweis auf externe CSS-Datei für die Gestaltung -->
+        <title>M10: Webtechnologie</title> <!-- Titel des HTML-Dokuments -->
+        <script defer src="./js/home.js"></script> <!-- Verweis auf externe JavaScript-Datei mit defer-Attribut -->
     </head>
 
     <body>
+      <!-- Beginn des Körperbereichs des HTML-Dokuments -->
       <header>
-        <nav>
-          <div>
+        <!-- Header-Bereich der Seite -->
+        <nav> <!-- Navigationsbereich im Header -->
+          <div>  <!-- Container für den Navigationsbereich -->
               <ul>
+                <!-- Ungeordnete Liste für Navigationspunkte -->
                 <li><a class="active" href="home.html">Home</a></li>
                 <li><a href="game.html">Spiel</a></li>
                 <li><a href="shop.html">Online-Shop</a></li>
@@ -27,9 +32,15 @@
       </header>
 
       <main id="inhalt">
+        <!-- Hauptbereich der Webseite mit ID "inhalt" -->
         <div id="homepage">
+          <!-- Container für die Startseite -->
+
+          <!-- Willkommensnachricht und allgemeine Informationen -->
           <h1>Willkommen auf unserer Webseite!</h1>
           <p>Entdecken Sie die faszinierende Welt der Webtechnologie mit unserem M10 Kurs. Hier finden Sie Informationen über verschiedene Themen, von Spielen bis hin zu unserem Online-Shop. Wir bieten eine Vielzahl von Produkten und interessanten Inhalten für Sie.<br> Unsere Webseite ist nicht nur informativ, sondern auch benutzerfreundlich gestaltet. Genießen Sie eine angenehme Navigation durch unsere Seiten und entdecken Sie, was wir zu bieten haben.</p>
+          
+          <!-- Abschnitte zu verschiedenen Bereichen der Webseite -->
           <h2>Online-Shop</h2>
           <p>Besuchen Sie unseren Online-Shop, um hochwertige Produkte zu entdecken. Von exquisitem Ziegenkäse bis hin zu niedlichen Teddybären – wir haben für jeden etwas.</p>
           <h2>Spiel</h2>
@@ -44,14 +55,17 @@
       </main>
 
       <footer>
+        <!-- Footer-Bereich der Seite -->
         <ul>
+          <!-- Ungeordnete Liste im Footer -->
             <li><a href="barrierefreiheit.html">Erklärung zur Barrierefreiheit</a></li>
             <li><a href="impressum.html">Impressum</a></li>
             <li><a href="datenschutz.html">Datenschutzerklärung</a></li>
+            <!-- Verschiedene Links im Footer zu Seiten wie Barrierefreiheitserklärung, Impressum und Datenschutzerklärung -->
         </ul>
       </footer>
 
-      <!-- Newsletter Popup -->
+      <!-- Popup für Newsletter-Anmeldung -->
       <div id="newsletter-popup" class="popup">
         <div class="modal-overlay"></div>
         <div class="popup-content">
@@ -63,7 +77,7 @@
         </div>
       </div>
 
-      <!-- Registration Popup -->
+       <!-- Popup für Registrierung -->
       <div id="registration-popup" class="popup">
         <div class="modal-overlay"></div>
         <div class="popup-content">
@@ -86,7 +100,7 @@
         </div>
       </div>
 
-      <!-- Confirmation Popup -->
+      <!-- Popup für Bestätigung -->
       <div id="confirmation-popup" class="popup">
           <div class="modal-overlay"></div>
           <div class="popup-content">
@@ -99,3 +113,4 @@
 
     </body>
 </html>
+<!-- Ende des HTML-Dokuments -->
