--- a/impressum.html
+++ b/impressum.html
@@ -1,20 +1,27 @@
 <!DOCTYPE html>
 <html lang="de">
+  
     <head>
-        <meta charset="UTF-8" />
-        <meta name="author" content="Benjamin Boehm - Giuseppe Teresi">
-        <meta name="date" content="02-01-2024">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./css/styles.css">
-        <title>M10: Webtechnologie</title>
-        <script defer src=" "></script>
+      <!-- Definition des HTML5-Dokuments -->
+        <meta charset="UTF-8" /> <!-- Festlegung der Zeichenkodierung auf UTF-8 -->
+        <meta name="author" content="Benjamin Boehm - Giuseppe Teresi"> <!-- Autoren -->
+        <meta name="date" content="02-01-2024"> <!-- Veröffentlichungsdatum -->
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Einstellungen für responsive Darstellung auf verschiedenen Geräten -->
+        <link rel="stylesheet" href="./css/styles.css"> <!-- Verweis auf externe CSS-Datei für die Gestaltung -->
+        <title>M10: Webtechnologie</title> <!-- Titel des HTML-Dokuments -->
+        <script defer src=" "></script> <!-- Leerer Verweis auf eine JavaScript-Datei mit defer-Attribut -->
     </head>
 
     <body>
+      <!-- Beginn des Körperbereichs des HTML-Dokuments -->
       <header>
+        <!-- Header-Bereich der Seite -->
         <nav>
-          <div>
+          <!-- Navigationsbereich im Header -->
+          <div> <!-- Container für den Navigationsbereich -->
+
               <ul>
+                <!-- Ungeordnete Liste für Navigationspunkte -->
                 <li><a href="home.html">Home</a></li>
                 <li><a href="game.html">Spiel</a></li>
                 <li><a href="shop.html">Online-Shop</a></li>
@@ -27,21 +34,36 @@
       </header>
 
       <main id="inhalt">
-        <div id="impressum"><h1>Impressum</h1><p>Angaben gemäß § 5 TMG</p><p>Benjamin Böhm <br> 
+        <!-- Hauptbereich der Webseite mit ID "inhalt" -->
+        <div id="impressum">
+          <!-- Container für den Impressum-Bereich -->
+          <h1>Impressum</h1> <!-- Überschrift für den Impressum-Bereich -->
+
+
+          <p>Angaben gemäß § 5 TMG</p>
+          <!-- Angaben gemäß § 5 TMG -->
+          <p>Benjamin Böhm <br> 
             Bergstraße<br> 
             56656 Brohl-Lützing <br> 
+            <!-- Vertretungsinformationen -->
             </p><p> <strong>Vertreten durch: </strong><br>
-            Benjamin Böhm<br>
+            Giuseppe Teresi<br>
+
+             <!-- Kontaktinformationen -->
             </p><p><strong>Kontakt:</strong> <br>
             Telefon: +49 160-93392183<br>
-            E-Mail: <a href="mailto:benjaminpaul.boehm@gmail.com">benjaminpaul.boehm@gmail.com</a><br></p><p><strong>Haftungsausschluss: </strong><br><br><strong>Haftung für Inhalte</strong><br><br>
+            E-Mail: <a href="mailto:benjaminpaul.boehm@gmail.com">benjaminpaul.boehm@gmail.com</a><br></p><p><strong>
+            <!-- Haftungsausschluss -->
+            Haftungsausschluss: </strong><br><br><strong>Haftung für Inhalte</strong><br><br>
             Die Inhalte unserer Seiten wurden mit größter Sorgfalt erstellt. Für die Richtigkeit, Vollständigkeit und Aktualität der Inhalte können wir jedoch keine Gewähr übernehmen. Als Diensteanbieter sind wir gemäß § 7 Abs.1 TMG für eigene Inhalte auf diesen Seiten nach den allgemeinen Gesetzen verantwortlich. Nach §§ 8 bis 10 TMG sind wir als Diensteanbieter jedoch nicht verpflichtet, übermittelte oder gespeicherte fremde Informationen zu überwachen oder nach Umständen zu forschen, die auf eine rechtswidrige Tätigkeit hinweisen. Verpflichtungen zur Entfernung oder Sperrung der Nutzung von Informationen nach den allgemeinen Gesetzen bleiben hiervon unberührt. Eine diesbezügliche Haftung ist jedoch erst ab dem Zeitpunkt der Kenntnis einer konkreten Rechtsverletzung möglich. Bei Bekanntwerden von entsprechenden Rechtsverletzungen werden wir diese Inhalte umgehend entfernen.<br><br><strong>Urheberrecht</strong><br><br>
             Die durch die Seitenbetreiber erstellten Inhalte und Werke auf diesen Seiten unterliegen dem deutschen Urheberrecht. Die Vervielfältigung, Bearbeitung, Verbreitung und jede Art der Verwertung außerhalb der Grenzen des Urheberrechtes bedürfen der schriftlichen Zustimmung des jeweiligen Autors bzw. Erstellers. Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet. Soweit die Inhalte auf dieser Seite nicht vom Betreiber erstellt wurden, werden die Urheberrechte Dritter beachtet. Insbesondere werden Inhalte Dritter als solche gekennzeichnet. Sollten Sie trotzdem auf eine Urheberrechtsverletzung aufmerksam werden, bitten wir um einen entsprechenden Hinweis. Bei Bekanntwerden von Rechtsverletzungen werden wir derartige Inhalte umgehend entfernen.</p><br>
         </div>
       </main>
 
       <footer>
+        <!-- Footer-Bereich der Seite -->
         <ul>
+          <!-- Ungeordnete Liste für Fußzeilenlinks -->
             <li><a href="barrierefreiheit.html">Erklärung zur Barrierefreiheit</a></li>
             <li><a class="active" href="impressum.html">Impressum</a></li>
             <li><a href="datenschutz.html">Datenschutzerklärung</a></li>
@@ -49,3 +71,4 @@
       </footer>
     </body>
 </html>
+<!-- Ende des HTML-Dokuments -->
