--- a/game.html
+++ b/game.html
@@ -38,9 +38,9 @@
             <div> <!-- Weiterer Container -->
                 <button id="startButton">Start Spiel</button> <!-- Button zum Starten des Spiels mit ID "startButton" -->
                 <br>
-                <p><strong>Die Steuerung der Schlange in unserem Snake-Spiel ist intuitiv und einfach: <br> Mit den Pfeiltasten (oben, 
-                    unten, links, rechts) bestimmen Sie die Richtung der Schlange. <br> <br> Das Spielziel ist ebenso klar wie 
-                    herausfordernd: <br> Führen Sie die Schlange geschickt über das Spielfeld, um Äpfel zu fressen. <br> Jeder 
+                <p><strong> <h3> Die Steuerung der Schlange in unserem Snake-Spiel ist intuitiv und einfach: </h3> <br> Mit den Pfeiltasten (oben, 
+                    unten, links, rechts) bestimmen Sie die Richtung der Schlange. <br> <br> 
+                    <h3>Das Spielziel ist ebenso klar wie herausfordernd:</h3> <br> Führen Sie die Schlange geschickt über das Spielfeld, um Äpfel zu fressen. <br> Jeder 
                     verschlungene Apfel verlängert die Schlange und bringt Punkte für den eigenen Rekord. 
                 </strong></p>
             </div>
