--- a/game.html
+++ b/game.html
@@ -31,18 +31,19 @@
         <main id="inhalt"> <!-- Hauptbereich der Webseite mit ID "inhalt" -->
             
             <div id="gameArea"> <!-- Container für den Spielbereich -->
-                <h1> Snake Spiel</h1>
+                <h2> Snake Spiel</h2>
+                <br>
                 <canvas id="gameCanvas" width="400" height="400"></canvas> <!-- Canvas-Element für die Spielfläche -->
             </div>
 
             <div> <!-- Weiterer Container -->
                 <button id="startButton">Start Spiel</button> <!-- Button zum Starten des Spiels mit ID "startButton" -->
                 <br>
-                <p><strong> <h3> Die Steuerung der Schlange in unserem Snake-Spiel ist intuitiv und einfach: </h3> <br> Mit den Pfeiltasten (oben, 
+                <p><strong> Die Steuerung der Schlange in unserem Snake-Spiel ist intuitiv und einfach: </strong> <br> Mit den Pfeiltasten (oben, 
                     unten, links, rechts) bestimmen Sie die Richtung der Schlange. <br> <br> 
-                    <h3>Das Spielziel ist ebenso klar wie herausfordernd:</h3> <br> Führen Sie die Schlange geschickt über das Spielfeld, um Äpfel zu fressen. <br> Jeder 
+                    <strong>Das Spielziel ist ebenso klar wie herausfordernd:</strong> <br> Führen Sie die Schlange geschickt über das Spielfeld, um Äpfel zu fressen. <br> Jeder 
                     verschlungene Apfel verlängert die Schlange und bringt Punkte für den eigenen Rekord. 
-                </strong></p>
+                </p>
             </div>
             
         </main>
