--- a/barrierefreiheit.html
+++ b/barrierefreiheit.html
@@ -20,6 +20,7 @@
                 <li><a href="shop.html">Online-Shop</a></li> <!-- Navigationslink zur Online-Shop-Seite -->
                 <li><a href="social-media.html">Social Media</a></li> <!-- Navigationslink zur Social Media-Seite -->
                 <li><a href="forum.html">Forum</a></li> <!-- Navigationslink zur Forum-Seite -->
+                <li><a href="datatables.html"> DataTables </li> <!-- Navigationslink zur DataTables-Seite -->
                 <li id="about"><a href="about.html">Über uns</a></li> <!-- Navigationslink zur Über-uns-Seite -->
               </ul>
           </div>
