--- a/datatables.html
+++ b/datatables.html
@@ -76,6 +76,17 @@
 
 </script> 
 
+<footer>
+    <!-- Footer-Bereich der Seite -->
+    <ul>
+      <!-- Ungeordnete Liste im Footer -->
+        <li><a href="barrierefreiheit.html">Erklärung zur Barrierefreiheit</a></li>
+        <li><a href="impressum.html">Impressum</a></li>
+        <li><a href="datenschutz.html">Datenschutzerklärung</a></li>
+        <!-- Verschiedene Links im Footer zu Seiten wie Barrierefreiheitserklärung, Impressum und Datenschutzerklärung -->
+    </ul>
+  </footer>
+
 
 </body>
 </html>
