--- a/impressum.html
+++ b/impressum.html
@@ -27,6 +27,7 @@
                 <li><a href="shop.html">Online-Shop</a></li>
                 <li><a href="social-media.html">Social Media</a></li>
                 <li><a href="forum.html">Forum</a></li>
+                <li><a href="datatables.html"> DataTables </li> <!-- Navigationslink zur DataTables-Seite -->
                 <li id="about"><a href="about.html">Über uns</a></li>
               </ul>
           </div>
