--- a/game.html
+++ b/game.html
@@ -9,7 +9,7 @@
         <title>M10: Webtechnologie</title> <!-- Titel des HTML-Dokuments -->
         <script defer src="./js/snake.js" type="module"></script> <!-- Verweis auf externe JavaScript-Datei mit defer-Attribut -->
     </head>
-    <body>
+    <body id="overflow">
         <!-- Beginn des Körperbereichs des HTML-Dokuments -->
         <header> <!-- Header-Bereich der Seite -->
             <nav> <!-- Navigationsbereich im Header -->
