dataTables.html update

--- a/datatables.html
+++ b/datatables.html
@@ -9,8 +9,8 @@
           <link rel="stylesheet" href="./css/styles.css"> <!-- Verweis auf externe CSS-Datei für die Gestaltung -->
           <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.css"> <!-- CSS Datei für die DataTables, hier Example gewählt-->
           <title>DataTables Beispiel</title> <!-- Titel des HTML-Dokuments -->
-          <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-          <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
+          <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> <!-- jQuery-Einbindung-->
+          <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script> <!-- dataTables Einbindung -->
    
 </head>
 <body>
