Hab die fehlenden "</a>" ergänzt

--- a/datatables.html
+++ b/datatables.html
@@ -26,7 +26,7 @@
               <li><a href="shop.html">Online-Shop</a></li>
               <li><a href="social-media.html">Social Media</a></li>
               <li><a href="forum.html">Forum</a></li>
-              <li><a href="datatables.html"> DataTables </li>
+              <li><a href="datatables.html"> DataTables</a> </li>
               <li id="about"><a href="about.html">Über uns</a></li>
             </ul>
         </div>
