--- a/forum.html
+++ b/forum.html
@@ -22,7 +22,7 @@
                 <li><a href="shop.html">Online-Shop</a></li>
                 <li><a href="social-media.html">Social Media</a></li>
                 <li><a class="active" href="forum.html">Forum</a></li>
-                <li><a href="datatables.html"> DataTables </li> <!-- Navigationslink zur DataTables-Seite -->
+                <li><a href="datatables.html"> DataTables</a> </li> <!-- Navigationslink zur DataTables-Seite -->
                 <li id="about"><a href="about.html">Über uns</a></li>
               </ul>
           </div>
